# web-scrape-football-data

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: release.yml  yank.yml
src/: main.py
src/config/: column_mapping.py  conf.py
src/tasks/: tasks.py
src/test/: test_web_crawler.py
src/utils/: data_parser.py  web_crawler.py
