[tool.poetry]
name = "web-scrape-football-data"
version = "1.0.0"
description = "Package to web scrape football data."
authors = ["Aaron Ginder <aaronginder@hotmail.co.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "72.1.0"
pandas = "^2.2.2"
luigi = "^3.5.1"
bs4 = "^0.0.2"
requests = "^2.32.3"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
